--- a/assignment-manager-app/package.json
+++ b/assignment-manager-app/package.json
@@ -10,14 +10,16 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "axios": "^0.21.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "5.0.1",
+    "axios": "^1.3.0",
+    "web-vitals": "^3.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.14.0",
-    "eslint-plugin-react": "^7.27.0"
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.0"
   },
   "repository": {
     "type": "git",
@@ -30,5 +32,17 @@
     "education"
   ],
   "author": "Your Name",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
